tests/integration/typechecking/params_dont_leak_error.june
// error: can't find variable

fun foo(x: i64) -> i64 {
    return x
}

println(x)